W06 - Fixed contrast issue in Contact page.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -106,7 +106,7 @@ form {
     padding: 1rem;
     border: 1px solid rgb(0 0 0 /0.1);
     border-radius: 0.5rem;
-    background-color: #eee;
+    background-color: #fafafa;
     display: grid;
 }
 fieldset {
@@ -229,7 +229,7 @@ td {
     padding: 1.2rem;
     border: 1px solid rgb(0 0 0 /0.1);
     border-radius: 0.5rem;
-    background-color: #eee;
+    background-color: #fafafa;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
